--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="nav_header_height">180dp</dimen>
     <dimen name="avatar_width">80dp</dimen>
     <dimen name="nav_header_vertical_spacing">10dp</dimen>
+    <dimen name="tab_layout_height">38dp</dimen>
 </resources>
