--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -5,6 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <!--<android.support.v7.widget.RecyclerView-->
+    <!--android:id="@+id/rv_news_list"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"/>-->
+
+    <!--<include layout="@layout/layout_common_empty"/>-->
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -12,7 +20,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_news_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            />
 
         <include layout="@layout/layout_common_empty"/>
     </FrameLayout>
