--- a/app/src/main/res/layout/fragment_news_main.xml
+++ b/app/src/main/res/layout/fragment_news_main.xml
@@ -25,7 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/tab_layout_height"
             app:tabIndicatorColor="@android:color/white"
-            app:tabMode="scrollable"/>
+            app:tabMode="scrollable"
+            app:tabTextColor="@android:color/white"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
