--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="avatar_width">80dp</dimen>
     <dimen name="nav_header_vertical_spacing">10dp</dimen>
     <dimen name="tab_layout_height">38dp</dimen>
+
+    <!--newsList-->
+    <dimen name="news_ads_height">180dp</dimen>
 </resources>
