--- a/app/src/main/res/layout/layout_empty_loading.xml
+++ b/app/src/main/res/layout/layout_empty_loading.xml
@@ -25,14 +25,14 @@
             android:textSize="16sp"/>
     </FrameLayout>
 
-    <!--<com.github.ybq.android.spinkit.SpinKitView-->
-        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-        <!--android:id="@+id/empty_loading"-->
-        <!--android:visibility="gone"-->
-        <!--android:padding="20dp"-->
-        <!--style="@style/SpinKitView.Circle"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--app:SpinKit_Color="@color/colorAccent" />-->
+    <com.github.ybq.android.spinkit.SpinKitView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/empty_loading"
+        android:visibility="gone"
+        android:padding="20dp"
+        style="@style/SpinKitView.Circle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:SpinKit_Color="@color/colorAccent" />
 </FrameLayout>
