--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -23,7 +23,7 @@
 
         <TextView
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:text="Android Studio"
+            android:text="知乎(非官方) By Louis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
