--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,9 @@
     <dimen name="photo_large_height">170dp</dimen>
     <dimen name="photo_small_height">90dp</dimen>
     <dimen name="photo_margin_width">1dp</dimen>
+
+    <!-- ToolBar -->
+    <dimen name="toolbar_margin_top">0dp</dimen>
+    <dimen name="toolbar_height">56dp</dimen>
+    <dimen name="tab_bar_margin_top">56dp</dimen>
 </resources>
