美图模块实现查看大图功能

--- a/app/src/main/res/layout/adapter_photo_view.xml
+++ b/app/src/main/res/layout/adapter_photo_view.xml
@@ -28,5 +28,5 @@
         android:gravity="center_horizontal"
         android:text="重新加载"
         android:textColor="@drawable/sel_text_reload"
-        />
+        android:visibility="gone" />
 </FrameLayout>
