--- a/app/src/main/res/layout/activity_big_photo.xml
+++ b/app/src/main/res/layout/activity_big_photo.xml
@@ -9,7 +9,7 @@
     app:mode="animate"
     tools:context=".photo.bigphoto.BigPhotoActivity">
 
-    <android.support.v4.view.ViewPager
+    <com.louis.myzhihudemo.widget.PhotoViewPager
         android:id="@+id/vp_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
