--- a/app/src/main/res/layout/activity_love.xml
+++ b/app/src/main/res/layout/activity_love.xml
@@ -2,7 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -11,30 +12,9 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/tool_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="enterAlways|scroll|snap"
-            app:navigationIcon="@mipmap/ic_nav"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-            <FrameLayout
-                android:id="@+id/fl_layout"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="right|center_horizontal"
-                android:background="@color/colorPrimary">
-                <!--@drawable/sel_text_love-->
-                <TextView
-                    android:id="@+id/tv_count"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/ic_btn_love"
-                    android:gravity="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="10sp" />
-            </FrameLayout>
-        </android.support.v7.widget.Toolbar>
+            app:layout_scrollFlags="scroll|enterAlways|snap" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
@@ -42,10 +22,9 @@
             android:layout_height="@dimen/tab_layout_height"
             app:tabIndicatorColor="@android:color/white"
             app:tabMode="fixed"
+            app:tabSelectedTextColor="@android:color/black"
             app:tabTextColor="@android:color/white" />
-
     </android.support.design.widget.AppBarLayout>
-
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
