--- a/app/src/main/res/layout/fragment_video_list.xml
+++ b/app/src/main/res/layout/fragment_video_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,4 +12,4 @@
 
 
     <include layout="@layout/layout_common_empty" />
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
